internal/gatewayapi/testdata/listenerset-cross-namespace.out.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: composite-gateway
    namespace: gateway-xls
  spec:
    allowedListeners:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            allow-xls: "true"
    gatewayClassName: envoy-gateway-class
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: core-http
      port: 80
      protocol: HTTP
  status:
    attachedListenerSets: 2
    listeners:
    - attachedRoutes: 0
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: core-http
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
httpRoutes:
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: route-cross-http-allowed
    namespace: default
  spec:
    parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: cross-namespace-allowed
      namespace: cross-allowed
      sectionName: cross-http-allowed
    rules:
    - backendRefs:
      - name: service-1
        port: 8080
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        group: gateway.networking.k8s.io
        kind: ListenerSet
        name: cross-namespace-allowed
        namespace: cross-allowed
        sectionName: cross-http-allowed
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: route-same-namespace
    namespace: cross-allowed
  spec:
    parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: cross-namespace-same
      namespace: cross-allowed
      sectionName: cross-http-same
    rules:
    - backendRefs:
      - name: service-1
        namespace: default
        port: 8080
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        group: gateway.networking.k8s.io
        kind: ListenerSet
        name: cross-namespace-same
        namespace: cross-allowed
        sectionName: cross-http-same
infraIR:
  gateway-xls/composite-gateway:
    proxy:
      listeners:
      - name: gateway-xls/composite-gateway/core-http
        ports:
        - containerPort: 10080
          name: http-80
          protocol: HTTP
          servicePort: 80
      - name: gateway-xls/composite-gateway/cross-allowed/cross-namespace-allowed/cross-http-allowed
        ports:
        - containerPort: 8083
          name: http-8083
          protocol: HTTP
          servicePort: 8083
      - name: gateway-xls/composite-gateway/cross-allowed/cross-namespace-same/cross-http-same
        ports:
        - containerPort: 8085
          name: http-8085
          protocol: HTTP
          servicePort: 8085
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-name: composite-gateway
          gateway.envoyproxy.io/owning-gateway-namespace: gateway-xls
        ownerReference:
          kind: GatewayClass
          name: envoy-gateway-class
      name: gateway-xls/composite-gateway
      namespace: envoy-gateway-system
listenerSets:
- apiVersion: gateway.networking.k8s.io/v1
  kind: ListenerSet
  metadata:
    name: cross-namespace-allowed
    namespace: cross-allowed
  spec:
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: cross-http-allowed
      port: 8083
      protocol: HTTP
    parentRef:
      name: composite-gateway
      namespace: gateway-xls
  status:
    conditions:
    - lastTransitionTime: null
      message: All listeners are valid
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: null
      message: All listeners are programmed
      reason: Programmed
      status: "True"
      type: Programmed
    listeners:
    - attachedRoutes: 1
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      - lastTransitionTime: null
        message: No conflicts detected
        reason: NoConflicts
        status: "False"
        type: Conflicted
      name: cross-http-allowed
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
- apiVersion: gateway.networking.k8s.io/v1
  kind: ListenerSet
  metadata:
    name: cross-namespace-same
    namespace: cross-allowed
  spec:
    listeners:
    - allowedRoutes:
        namespaces:
          from: Same
      name: cross-http-same
      port: 8085
      protocol: HTTP
    parentRef:
      name: composite-gateway
      namespace: gateway-xls
  status:
    conditions:
    - lastTransitionTime: null
      message: All listeners are valid
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: null
      message: All listeners are programmed
      reason: Programmed
      status: "True"
      type: Programmed
    listeners:
    - attachedRoutes: 1
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      - lastTransitionTime: null
        message: No conflicts detected
        reason: NoConflicts
        status: "False"
        type: Conflicted
      name: cross-http-same
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
- apiVersion: gateway.networking.k8s.io/v1
  kind: ListenerSet
  metadata:
    name: cross-namespace-denied
    namespace: cross-denied
  spec:
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: cross-http-denied
      port: 8084
      protocol: HTTP
    parentRef:
      name: composite-gateway
      namespace: gateway-xls
  status:
    conditions:
    - lastTransitionTime: null
      message: ListenerSet attachment from namespace cross-denied not allowed by Gateway
        gateway-xls/composite-gateway
      reason: NotAllowed
      status: "False"
      type: Accepted
    - lastTransitionTime: null
      message: Not Programmed
      reason: NotAllowed
      status: "False"
      type: Programmed
xdsIR:
  gateway-xls/composite-gateway:
    accessLog:
      json:
      - path: /dev/stdout
    globalResources:
      proxyServiceCluster:
        metadata:
          kind: Service
          name: envoy-gateway-xls-composite-gateway-e1ee602f
          namespace: envoy-gateway-system
          sectionName: "8080"
        name: gateway-xls/composite-gateway
        settings:
        - addressType: IP
          endpoints:
          - host: 7.6.5.4
            port: 8080
            zone: zone1
          metadata:
            kind: Service
            name: envoy-gateway-xls-composite-gateway-e1ee602f
            namespace: envoy-gateway-system
            sectionName: "8080"
          name: gateway-xls/composite-gateway
          protocol: TCP
    http:
    - address: 0.0.0.0
      externalPort: 80
      hostnames:
      - '*'
      metadata:
        kind: Gateway
        name: composite-gateway
        namespace: gateway-xls
        sectionName: core-http
      name: gateway-xls/composite-gateway/core-http
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 10080
    - address: 0.0.0.0
      externalPort: 8083
      hostnames:
      - '*'
      metadata:
        kind: Gateway
        name: composite-gateway
        namespace: gateway-xls
        sectionName: cross-http-allowed
      name: gateway-xls/composite-gateway/cross-allowed/cross-namespace-allowed/cross-http-allowed
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 8083
      routes:
      - destination:
          metadata:
            kind: HTTPRoute
            name: route-cross-http-allowed
            namespace: default
          name: httproute/default/route-cross-http-allowed/rule/0
          settings:
          - addressType: IP
            endpoints:
            - host: 7.7.7.7
              port: 8080
            metadata:
              kind: Service
              name: service-1
              namespace: default
              sectionName: "8080"
            name: httproute/default/route-cross-http-allowed/rule/0/backend/0
            protocol: HTTP
            weight: 1
        hostname: '*'
        isHTTP2: false
        metadata:
          kind: HTTPRoute
          name: route-cross-http-allowed
          namespace: default
        name: httproute/default/route-cross-http-allowed/rule/0/match/-1/*
    - address: 0.0.0.0
      externalPort: 8085
      hostnames:
      - '*'
      metadata:
        kind: Gateway
        name: composite-gateway
        namespace: gateway-xls
        sectionName: cross-http-same
      name: gateway-xls/composite-gateway/cross-allowed/cross-namespace-same/cross-http-same
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 8085
      routes:
      - destination:
          metadata:
            kind: HTTPRoute
            name: route-same-namespace
            namespace: cross-allowed
          name: httproute/cross-allowed/route-same-namespace/rule/0
          settings:
          - addressType: IP
            endpoints:
            - host: 7.7.7.7
              port: 8080
            metadata:
              kind: Service
              name: service-1
              namespace: default
              sectionName: "8080"
            name: httproute/cross-allowed/route-same-namespace/rule/0/backend/0
            protocol: HTTP
            weight: 1
        hostname: '*'
        isHTTP2: false
        metadata:
          kind: HTTPRoute
          name: route-same-namespace
          namespace: cross-allowed
        name: httproute/cross-allowed/route-same-namespace/rule/0/match/-1/*
    readyListener:
      address: 0.0.0.0
      ipFamily: IPv4
      path: /ready
      port: 19003
